ticTacToe/style.css
*,
*::after,
*::before {
}

:root {
  --cell-size: 100px;
  --mark-size: calc(
    var(--cell-size) * 0.9
  ); /* for items inside cell is shorter than the cell size */
}

body {
  margin: 0;
  box-sizing: border-box;
  background-image: url(https://img.freepik.com/free-photo/background-crumpled-paper-sheet_1194-7545.jpg?size=626&ext=jpg);
  display: block;
  position: relative;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100vw;
  height: 100vh;
}

.turn {
  width: 100vw;
  height: 1vh;
  display: grid;
  position: relative;
  justify-content: center;
  align-content: center;
  justify-items: center;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 0;
  font-family: "Times New Roman", Times, serif;
  font-size: 50px;
}

.board {
  width: 100vw;
  height: 40vh;
  display: grid;
  justify-content: center;
  align-content: center;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(3, auto);
}

.cell {
  width: var(--cell-size);
  height: var(--cell-size);
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
}

/* removing border */
.cell:first-child,
.cell:nth-child(2),
.cell:nth-child(3) {
  border-top: none;
}

.cell:nth-child(3n + 1) {
  border-left: none;
}

.cell:nth-child(3n + 3) {
  border-right: none;
}

.cell:last-child,
.cell:nth-child(7),
.cell:nth-child(8) {
  border-bottom: none;
}

.cell.x,
.cell.circle {
  cursor: not-allowed;
}

/* x mark hover */
.cell.x::before,
.cell.x::after {
  background-color: black;
}

/* complex part - hover */
.board.x .cell:not(.x):not(.circle):hover::before,
.board.x .cell:not(.x):not(.circle):hover::after {
  background-color: lightgrey;
}

/* psuedo element for x mark */
.cell.x::before,
.cell.x::after,
.board.x .cell:not(.x):not(.circle):hover::before,
.board.x .cell:not(.x):not(.circle):hover::after {
  content: " ";
  position: absolute; /* to overlap */
  width: calc(var(--mark-size) * 0.15);
  height: var(--mark-size);
}

/* rotating mark to form an x */
.cell.x::before,
.board.x .cell:not(.x):not(.circle):hover::before {
  transform: rotate(45deg);
}

.cell.x::after,
.board.x .cell:not(.x):not(.circle):hover::after {
  transform: rotate(-45deg);
}

/* circle mark hover */
/* psuedo element for circle mark */
.cell.circle::before {
  background-color: black;
}

.board.circle .cell:not(.x):not(.circle):hover::before {
  background-color: lightgray;
}

.cell.circle::before,
.cell.circle::after,
.board.circle .cell:not(.x):not(.circle):hover::before,
.board.circle .cell:not(.x):not(.circle):hover::after {
  content: " ";
  position: absolute; /* to overlap */
  border-radius: 50%;
}

.cell.circle::before,
.board.circle .cell:not(.x):not(.circle):hover::before {
  width: var(--mark-size);
  height: var(--mark-size);
}

.cell.circle::after,
.board.circle .cell:not(.x):not(.circle):hover::after {
  width: calc(var(--mark-size) * 0.7);
  height: calc(var(--mark-size) * 0.7);
  background-color: white;
}

.winning-message {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.9);
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 5rem;
  flex-direction: column;
}

.winning-message button {
  font-size: 3rem;
  background-color: white;
  border: 1px solid black;
  padding: 0.25em 0.5em;
  cursor: pointer;
}

.winning-message button:hover {
  background-color: black;
  color: white;
  border-color: white;
}

#prevButton {
  font-size: 3rem;
  background-color: white;
  border: 1px solid black;
  padding: 0.25em 0.5em;
  cursor: pointer;
  position: inherit;
  border-radius: 25px;
}

#nextButton {
  font-size: 3rem;
  background-color: white;
  border: 1px solid black;
  padding: 0.25em 0.5em;
  cursor: pointer;
  position: inherit;
  border-radius: 25px;
}

.buttons {
  width: 100vw;
  height: 20vh;
  display: grid;
  justify-content: center;
  align-content: center;
  justify-items: center;
  align-items: center;
  grid-template-columns: repeat(3, auto);
  margin-bottom: 0;
}

.winning-message.show {
  display: flex;
}

